[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/levels/story_mode/character/Character.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 102.421

[node name="Character" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="TalkToLabel" type="Label" parent="."]
margin_left = 41.0
margin_top = 6.0
margin_right = 127.0
margin_bottom = 20.0
text = "[B] Talk to %s"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
